fixed file call

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <!--
                             <li><a href="#" accesskey="3" title="">Sign Guestbook</a></li>
                             -->
-                            <li><a href="file:///Users/hax/Documents/Solidity%20Projects/marriage%20interface/index-button-test.html">Choose Contract</a>
+                            <li><a href="index-button-test.html">Choose Contract</a>
                             </li>
                         </ul>
                     </div>
