--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <title>ETHMarriage</title>
+        <title>SmartWed</title>
 
         <meta name="keywords" content="" />
         <meta name="description" content="" />
