--- a/index-metamasktest.html
+++ b/index-metamasktest.html
@@ -158,7 +158,7 @@ function indexInit() {
                         web3js = new Web3(new Web3.providers.HttpProvider("https://mainnet.infura.io/ySFxqrROS2e1chccEsyS"));
                     }
                         // Now you can start your app & access web3 freely:
-                        startApp()
+                        // startApp()
                 })
                 
                 // contract ABI set
