--- a/meta-test.html
+++ b/meta-test.html
@@ -16,6 +16,31 @@
   </fieldset>
 
   <script>
+    // variable setup
+    var smartWedContAddress;
+
+    // get query variable
+    function getQueryVariable(variable) {
+        var query = window.location.search.substring(1);
+        var vars = query.split('&');
+        for (var i=0; i<vars.length; i++) {
+            var pair = vars[i].split('=');
+            if (decodeURIComponent(pair[0]) == variable) {
+                return decodeURIComponent(pair[1]);
+            }
+        }
+    } 
+
+    // taken from smartwed page to get address of target contract
+    function setWedContAddr() {
+        smartWedContAddr = getQueryVariable('smartWedAddress');
+        if (smartWedContAddr != null) {
+            // alert(smartWedContAddr);
+        } else {
+            smartWedContAddr = '0xd09B6E3C8FB7E05e248197EC45c38cD338d66C1a';
+        }
+    }
+
     // MetaMask injects the web3 library for us.
     window.onload = function() {
       if (typeof web3 === 'undefined') {
@@ -25,7 +50,7 @@
     function send() {
       web3.eth.sendTransaction({
         from: web3.eth.coinbase,
-        to: '0xE767aEB31dAAF66366999F72FB5De2CEEA76c277',
+        to: smartWedContAddress,
         value: web3.toWei(document.getElementById("amount").value, 'ether')
       }, function(error, result) {
         if (!error) {
