--- a/meta-test.html
+++ b/meta-test.html
@@ -39,6 +39,7 @@
         } else {
             smartWedContAddr = '0xd09B6E3C8FB7E05e248197EC45c38cD338d66C1a';
         }
+        alert(smartWedContAddress);
     }
 
     // MetaMask injects the web3 library for us.
