fixed spelling error

--- a/meta-test.html
+++ b/meta-test.html
@@ -19,7 +19,7 @@
     </label>
     <br>
     <label>Message:
-        <input type="text" id="msgText"></input>
+        <input type="text" id="msgTxt"></input>
     </label>
     <br>
     <label>URL:
