--- a/meta-test.html
+++ b/meta-test.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-     <title>Introduction to Dapps. Simple MetaMask example.</title>
+     <title>Metamask Guestbook Test</title>
   </head>
   <body>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut vestibulum diam. Nam varius eros eu dui molestie, et dignissim orci pellentesque. Praesent in ultrices magna. Fusce placerat eu nibh ut maximus. Nulla laoreet diam ac est congue, et varius ligula sollicitudin. Donec eu mi et sem hendrerit rhoncus vitae eu quam. Phasellus dictum congue erat. Etiam rutrum vel est eget mollis. Praesent volutpat turpis mi, id molestie sapien auctor consequat. Aenean laoreet elit ut lacus suscipit, sit amet fringilla orci dictum. Nam eget rhoncus neque. Vestibulum blandit eu ex a mattis.
+    Sign the Guestbook!
   </p>
   <div id="meta-mask-required"></div>
   <fieldset>
