--- a/metatester.html
+++ b/metatester.html
@@ -4,6 +4,8 @@
 
         <script>
                 function connectionInit() {
+
+                    smartWedContAddr="0x16a594158d24e225c6c11f916e518025b75b0b5c";
                 // connect direct to infura - needs to change to metamask when guestbook entry is created
                 //
                 //web3 = new Web3(new Web3.providers.HttpProvider("https://mainnet.infura.io/ySFxqrROS2e1chccEsyS")); 
