--- a/metatester.html
+++ b/metatester.html
@@ -49,3 +49,4 @@
             </script>
         </head>
         <body onload="connectionInit()">
+            <script>document.write(marriageDate);</script>
