--- a/metatester.html
+++ b/metatester.html
@@ -55,7 +55,7 @@
                     }
                 });
                 console.log(marriageDate);
-                alert(marriageDate);
+                alert(marriageDate[0]);
             }
 
             </script>
