--- a/metatester.html
+++ b/metatester.html
@@ -41,7 +41,7 @@
                
                 // myContractInstance = MyContract.at(smartWedContAddr);
                 var myContractInstance = MyContract.at("0x958a8f594101d2c0485a52319f29b2647f2ebc06");
-
+                console.log(myContractInstance);
                 // gather values for partner1, partner2, vows, owner
                 // partner1 = myContractInstance.partner1.call();
                 // partner2 = myContractInstance.partner2.call();
@@ -55,7 +55,7 @@
                     }
                 });
                 console.log(marriageDate);
-                alert(marriageDate[0]);
+                alert(marriageDate);
             }
 
             </script>
