--- a/metatester.html
+++ b/metatester.html
@@ -47,9 +47,19 @@
                 // partner2 = myContractInstance.partner2.call();
                 // vows = myContractInstance.vows.call();
                 // owner = myContractInstance.owner.call();
-                marriageDate = myContractInstance.marriageDate;
-                console.log(marriageDate);
-                alert(marriageDate);
+                marriageDate = myContractInstance.marriageDate.call(function (error, result) {
+                    if (!error) {
+                        console.log(result);
+                    } else {
+                        console.error(error);
+                    }
+                });
+                
+                result = myContract.methods.owner.call().call((error, result) => {
+                    console.log(result);
+                });
+
+                alert(result);
             }
 
             </script>
