--- a/metatester.html
+++ b/metatester.html
@@ -55,7 +55,7 @@
                     }
                 });
                 
-                result = myContract.methods.owner.call().call((error, result) => {
+                result = myContractInstance.owner.call().call((error, result) => {
                     console.log(result);
                 });
 
