--- a/index-5.html
+++ b/index-5.html
@@ -386,6 +386,34 @@ function indexInit() {
                         </p>
                 </div>
                     <ul class="actions">
+
+                        
+<!-- BEGIN GUESTBOOK TEST -->
+<div id="meta-mask-required"></div>
+  <fieldset>
+<!--    
+    <label> Ether:
+      <input type="text" id="amount"></input>
+    </label>
+    <button onclick="send()">Donate to the Author</button>
+-->
+    <label>From:
+        <input type="text" id="msgFrom"></input>
+    </label>
+    <br>
+    <label>Message:
+        <input type="text" id="msgTxt"></input>
+    </label>
+    <br>
+    <label>URL:
+        <input type="text" id="msgUrl"></input>
+    </label>
+    <button onclick="writeGuestbook()">Test Message Sender</button>
+    <div id="response"></div>
+  </fieldset>
+  <!-- END GUESTBOOK TEST -->
+
+
                         <li><a href="#" class="button">Sign the Guestbook</a></li>
                     </ul>
             </div>
