--- a/metatester2.html
+++ b/metatester2.html
@@ -12,7 +12,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
 <!-- include bluebird for promisify -->
-<script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.min.js"></script>
+<script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.js"></script>
 
 <script>
             //
@@ -29,7 +29,7 @@
                     web3js = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
                     }
                     // Now you can start your app & access web3 freely:
-                    startApp()
+                    //startApp()
             })    
             //
             // END METAMASK
