--- a/metatester2.html
+++ b/metatester2.html
@@ -63,7 +63,7 @@
         });
 
         //adjustedBalance = await balance / Math.pow(10, await decimals)
-        alert(await owner);
+        alert(owner);
         //document.getElementById("tokenBalance").innerHTML = adjustedBalance;
         //document.getElementById("tokenInfo").innerHTML = " " + await tokenSymbol + " (" + await tokenName + ")";
     }
@@ -73,4 +73,5 @@
 </head>
 <body onload="getSmartWedInfo()">
 testing
+<script>document.write(owner);</script>
 </body>
