--- a/meta-test.html
+++ b/meta-test.html
@@ -2,8 +2,6 @@
   <head>
      <title>SmartWed Guestbook</title>
   
-     
-      // CSS stuff
         <meta name="keywords" content="" />
         <meta name="description" content="" />
         <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet" />
@@ -115,7 +113,8 @@
               </div>
           </div> 
 
-        <!-- Multisig Account Balance Section -->
+        <!-- guestbook form Section -->
+        <div id="meta-mask-required">
         <div id="page" class="container">
             <div class="title">
                 <h2>Sign the Guestbook:</h2>
@@ -131,16 +130,15 @@
                   <label>URL:<br>
                       <input type="text" id="msgUrl"></input>
                   </label>
+                  <br>
                   <button onclick="writeGuestbook()">Write To Guestbook</button>
                   <div id="response"></div>
                     
                 </span> 
             </div>                    
     </div>
-  <p>
-    Sign the Guestbook!
-  </p>
-  <div id="meta-mask-required"></div>
+ 
+    </div>
 
   
   </body>
