Added footer, instructions

--- a/meta-test.html
+++ b/meta-test.html
@@ -93,11 +93,11 @@
           <div id="header-wrapper">
               <div id="header" class="container">
                   <div id="logo">
-                      <h1><a href="#"><img src="ethmarriage-logo.png" height="40" width="40" align="top"> SmartWed</a></h1>
+                      <h1><a href="index.html"><img src="ethmarriage-logo.png" height="40" width="40" align="top"> SmartWed</a></h1>
                   </div>
                   <div id="menu">
                       <ul>
-                          <li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
+                          <li class="current_page_item"><a href="index.html" accesskey="1" title="">Homepage</a></li>
                           <li><a href="https://wallet.gnosis.pm" accesskey="2" title="" target="new">Access Multisig</a></li>
                           <!--
                           <li><a href="#" accesskey="3" title="">Sign Guestbook</a></li>
@@ -140,6 +140,29 @@
  
     </div>
 
+    <!-- instructions Section -->
+    <div id="featured">
+        <div class="container">
+            <div class="title">
+                
+                <span class="byline">
+                    To sign the Guestbook, please use the form above, and click<br>
+                    the 'Write to Guestbook' button.<br>
+                     In order to send a donation to the couple's Multisig Wallet,<br>
+                     just add an ETH amount in the Metamask confirmation window.<br>
+            </div>
+            
+    </div>
+
+    <div id="footer">
+        <div class="container">
+            <div class="title">
+                <p>This is a <a href="https://giveth.io" target="new">Giveth</a> Social Coding Project, Interface by <a href="https://github.com/bowensanders/" target="new">Bowen Sanders</a> with help from <a href="https://github.com/craigkc/" target="new">Craig Scheets</a></a>.<br>The first instance of this Smart Marriage contract was coded by <a href="https://github.com/jbaylina" target="new">Jordi Baylina</a> and  
+                    <!-- this creates a link to the contract being examined from the myContractInstance array -->
+                    <a href="https://etherscan.io/address/0xd09B6E3C8FB7E05e248197EC45c38cD338d66C1a" target="new"> deployed to the Ethereum Blockchain</a> at Burning Man 2017. <br>The contract was based on the first Ethereum Marriage Contract by <a href="https://github.com/Souptacular" target="new">Hudson Jameson</a>.<br>Theme based on <strong>PlainDisplay</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. </p>
+            </div>
+        </div>
+    </div>
   
   </body>
 </html>
