--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function indexInit() {
 
             // code to parse data from etherscan api for first transaction datestamp (wedding date) and confirmations
             function etherscanAPIParse() {
-                var address2 = '0xd09B6E3C8FB7E05e248197EC45c38cD338d66C1a';
+                var address2 = smartWedContAddr;
                 $.getJSON('https://api.etherscan.io/api?module=account&action=txlist&address=' + address2 + '&sort=asc&page=1&offset=1&apikey=8VII5WKFAB7FXWFUGI9HAMK6Z6DMYXAZNJ', function(data) {    
                     var inceptDate = moment(data.result[0].timeStamp,"X").format("DD MMM YYYY");
                     var contractAcceptDate = moment(marriageDate,"X").format("DD MMM YYYY");
