--- a/meta-test.html
+++ b/meta-test.html
@@ -84,6 +84,7 @@
             document.getElementById('response').innerHTML = '<pre>' + error + '</pre>'
           }
         })
+        printBackUrl();
       }
       // 
       // end Guestbook 
