--- a/meta-test.html
+++ b/meta-test.html
@@ -32,12 +32,12 @@
       function setWedContAddr() {
           smartWedContAddr = getQueryVariable('smartWedAddress');
           if (smartWedContAddr != null) {
-              // alert(smartWedContAddr);
+               alert(smartWedContAddr);
           } else {
               // smartWedContAddr = '0xd09B6E3C8FB7E05e248197EC45c38cD338d66C1a';
-              
+              alert(error);
               // rinkeby test contract 
-              smartWedContAddr = '0x16A594158D24E225c6c11f916E518025b75b0B5C';
+              // smartWedContAddr = '0x16A594158D24E225c6c11f916E518025b75b0B5C';
           }
           // alert(smartWedContAddr);
       }
