--- a/meta-test.html
+++ b/meta-test.html
@@ -8,7 +8,12 @@
         <link href="./default.css" rel="stylesheet" type="text/css" media="all" />
         <link href="./fonts.css" rel="stylesheet" type="text/css" media="all" />
 
+        <!-- include moment - consider making a copy of this into the repo -->
+        <script src="https://momentjs.com/downloads/moment.min.js"></script>
 
+        <!-- include jQuery - because it looks easier than jumping into angular or react quite yet -->
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        
 <script>
       //
       // begin Guestbook Functions
