fixed button again

--- a/meta-test.html
+++ b/meta-test.html
@@ -13,7 +13,7 @@
 
         <!-- include jQuery - because it looks easier than jumping into angular or react quite yet -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        
+
 <script>
       //
       // begin Guestbook Functions
@@ -71,7 +71,7 @@
       }
   
       function printBackUrl() {
-          var guestbookUrl = '<a href="https://bowensanders.github.io/index.html?smartWedAddress=' + smartWedContAddr +'"class="button">Go Back</a>';
+          var backUrl = '<a href="https://bowensanders.github.io/index.html?smartWedAddress=' + smartWedContAddr +'"class="button">Go Back</a>';
           $('#lblPrintBackUrl').html(backUrl);
       }
 
