css cleanup maybe?

--- a/meta-test.html
+++ b/meta-test.html
@@ -166,7 +166,11 @@
                     the 'Write to Guestbook' button.<br>
                     In order to send a donation to the couple's Multisig Wallet,<br>
                     just add an ETH amount in the Metamask confirmation window.<br>
-                    <label id="lblPrintBackUrl"></label>
+                    <ul class="actions">
+                        <li>
+                          <label id="lblPrintBackUrl"></label>
+                        </li>
+                    </ul>
             </div>
          </div>   
     </div>
