--- a/meta-test.html
+++ b/meta-test.html
@@ -37,7 +37,7 @@
       function setWedContAddr() {
           smartWedContAddr = getQueryVariable('smartWedAddress');
           if (smartWedContAddr != null) {
-               alert(smartWedContAddr);
+               // alert(smartWedContAddr);
           } else {
               // smartWedContAddr = '0xd09B6E3C8FB7E05e248197EC45c38cD338d66C1a';
               alert(error);
