--- a/meta-test.html
+++ b/meta-test.html
@@ -166,6 +166,8 @@
                     the 'Write to Guestbook' button.<br>
                     In order to send a donation to the couple's Multisig Wallet,<br>
                     just add an ETH amount in the Metamask confirmation window.<br>
+                </span>
+            </div>        
                     <ul class="actions">
                         <li>
                           <label id="lblPrintBackUrl"></label>
