moved div tags and such

--- a/meta-test.html
+++ b/meta-test.html
@@ -165,7 +165,7 @@
                     To sign the Guestbook, please use the form above, and click<br>
                     the 'Write to Guestbook' button.<br>
                     In order to send a donation to the couple's Multisig Wallet,<br>
-                    just add an ETH amount in the Metamask confirmation window.<br>
+                    just add an ETH amount in the Metamask confirmation window.
                 </span>
             </div>        
                     <ul class="actions">
@@ -173,7 +173,7 @@
                           <label id="lblPrintBackUrl"></label>
                         </li>
                     </ul>
-            </div>
+            
          </div>   
     </div>
 
