--- a/meta-test.html
+++ b/meta-test.html
@@ -147,7 +147,7 @@
                       <input type="text" id="msgUrl"></input>
                     </label>
                   <br>
-                    <button onclick="writeGuestbook()">Write To Guestbook</button>
+                    <a href="#" class="button" onclick="writeGuestbook()">Write To Guestbook</a>
                   <div id="response"></div>
                     
                 </span> 
