--- a/meta-test.html
+++ b/meta-test.html
@@ -84,7 +84,7 @@
           myContractInstance = MyContract.at(smartWedContAddr);
           myContractInstance.sendMessage(messageFrom, messageTxt, messageUrl, function(error, result) {
           if (!error) {
-            document.getElementById('response').innerHTML = 'Success: <a href="https://etherscan.io/tx/' + result + '"> View Transaction </a>'
+            document.getElementById('response').innerHTML = 'Success: <a href="https://etherscan.io/tx/' + result + '" target="new"> View Transaction </a>'
           } else {
             document.getElementById('response').innerHTML = '<pre>' + error + '</pre>'
           }
