--- a/meta-test.html
+++ b/meta-test.html
@@ -165,8 +165,7 @@
                 <span class="byline">
                     To sign the Guestbook, please use the form above, and click<br>
                     the 'Write to Guestbook' button.<br>
-                    In order to send a donation to the couple's Multisig Wallet,<br>
-                    just add an ETH amount in the Metamask confirmation window.
+                    Coming Soon: Send ETH donations!
                 </span>
             </div>        
                     <ul class="actions">
