fixed layout, text

--- a/meta-test.html
+++ b/meta-test.html
@@ -151,9 +151,10 @@
                       <input type="text" id="msgUrl"></input>
                     </label>
                   <br>
-                  <label>Amount of ETH:<br>
-                    <input type="text" id="msgVal"></input>
-                  </label>
+                    <label>Amount of ETH:<br>
+                      <input type="text" id="msgVal"></input>
+                    </label>
+                  <br>
                     <a href="#" class="button" onclick="writeGuestbook()">Write To Guestbook</a>
                   <div id="response"></div>
                     
@@ -171,7 +172,7 @@
                 <span class="byline">
                     To sign the Guestbook, please use the form above, and click<br>
                     the 'Write to Guestbook' button.<br>
-                    Coming Soon: Send ETH donations!
+                    If you want to donate ETH to the couple, just enter the amount!
                 </span>
             </div>        
                     <ul class="actions">
