--- a/meta-test-66.html
+++ b/meta-test-66.html
@@ -128,7 +128,7 @@
           <div id="header-wrapper">
               <div id="header" class="container">
                   <div id="logo">
-                      <h1><a href="index.html"><img src="ethmarriage-logo.png" height="40" width="40" align="top"> SmartWed</a></h1>
+                      <h1><a href="index.html"><img src="securityguard.png" height="40" width="40" align="top"> SecurityGuard</a></h1>
                   </div>
                   <div id="menu">
                       <ul>
@@ -152,27 +152,9 @@
         <div id="meta-mask-required">
         <div id="page" class="container">
             <div class="title">
-                <h2>Sign the Guestbook:</h2>
+                <h2>Security Guard:</h2>
             </div>
                 <span class="byline">
-                    <label>From:<br>
-                      <input type="text" id="msgFrom"></input>
-                    </label>
-                  <br>
-                    <label>Message:<br>
-                      <input type="text" id="msgTxt"></input>
-                    </label>
-                  <br>
-                    <label>URL:<br>
-                      <input type="text" id="msgUrl"></input>
-                    </label>
-                  <br>
-                    <label>Amount of ETH:<br>
-                      <input type="text" id="msgVal"></input>
-                    </label>
-                  <br>
-                    <a href="#" class="button" onclick="writeGuestbook()">Write To Guestbook</a>
-                  <div id="response"></div>
                   <br>
                     <a href="#" class="button" onclick="sendCheckIn()">CHECK IN NOW</a>
                   <div id="response"></div>
