--- a/meta-test-66.html
+++ b/meta-test-66.html
@@ -5,7 +5,7 @@
         <meta name="keywords" content="" />
         <meta name="description" content="" />
         <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet" />
-        <link href="./default.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="./default2.css" rel="stylesheet" type="text/css" media="all" />
         <link href="./fonts.css" rel="stylesheet" type="text/css" media="all" />
 
         <!-- include moment - consider making a copy of this into the repo -->
@@ -132,17 +132,17 @@
                   </div>
                   <div id="menu">
                       <ul>
+                        <!--
                           <li class="current_page_item"><a href="index.html" accesskey="1" title="">Homepage</a></li>
                           <li><a href="https://wallet.gnosis.pm" accesskey="2" title="" target="new">Access Multisig</a></li>
-                          <!--
                           <li><a href="#" accesskey="3" title="">Sign Guestbook</a></li>
 
                           <li><a href="index-button-test.html">Choose Contract</a>
 
                           <li><div id="buttonIndex"></div></li>
 
-                          -->
                           </li>
+                        -->
                       </ul>
                   </div>
               </div>
@@ -170,11 +170,7 @@
         <div class="container">
             <div class="title">
 
-                <span class="byline">
-                    To sign the Guestbook, please use the form above, and click<br>
-                    the 'Write to Guestbook' button.<br>
-                    If you want to donate ETH to the couple, just enter the amount!
-                </span>
+
             </div>
                     <ul class="actions">
                         <li>
@@ -188,9 +184,8 @@
     <div id="footer">
         <div class="container">
             <div class="title">
-                <p>SmartWed is a <a href="https://giveth.io" target="new">Giveth</a> Social Coding Project, Interface by <a href="https://github.com/bowensanders/" target="new">Bowen Sanders</a> with help from <a href="https://github.com/craigkc/" target="new">Craig Scheets</a></a>.<br>The first instance of this Smart Marriage contract was coded by <a href="https://github.com/jbaylina" target="new">Jordi Baylina</a> and
-                    <!-- this creates a link to the contract being examined from the myContractInstance array -->
-                    <a href="https://etherscan.io/address/0xd09B6E3C8FB7E05e248197EC45c38cD338d66C1a" target="new"> deployed to the Ethereum Blockchain</a> at Burning Man 2017. <br>The contract was based on the first Ethereum Marriage Contract by <a href="https://github.com/Souptacular" target="new">Hudson Jameson</a>.<br>Theme based on <strong>PlainDisplay</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. </p>
+                <p>SecurityGuard is a <a href="https://giveth.io" target="new">Giveth</a> Security Project, Interface by <a href="https://github.com/bowensanders/" target="new">Bowen Sanders</a>.
+                  <br>Theme based on <strong>PlainDisplay</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. </p>
             </div>
         </div>
     </div>
