--- a/meta-test-66.html
+++ b/meta-test-66.html
@@ -5,7 +5,8 @@
         <meta name="keywords" content="" />
         <meta name="description" content="" />
         <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet" />
-        <link href="./default2.css" rel="stylesheet" type="text/css" media="all" />
+<!--        <link href="./default2.css" rel="stylesheet" type="text/css" media="all" /> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/v3.0.0/mini-default.min.css">
         <link href="./fonts.css" rel="stylesheet" type="text/css" media="all" />
 
         <!-- include moment - consider making a copy of this into the repo -->
