--- a/meta-test-66.html
+++ b/meta-test-66.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet" />
 <!--        <link href="./default2.css" rel="stylesheet" type="text/css" media="all" /> -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/v3.0.0/mini-default.min.css">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.0/dist/mini-default.min.css">
         <link href="./fonts.css" rel="stylesheet" type="text/css" media="all" />
 
         <!-- include moment - consider making a copy of this into the repo -->
@@ -14,6 +14,8 @@
 
         <!-- include jQuery - because it looks easier than jumping into angular or react quite yet -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <script>
       //
