--- a/meta-test-66.html
+++ b/meta-test-66.html
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="title">
                 <p>SecurityGuard is a <a href="https://giveth.io" target="new">Giveth</a> Security Project, Interface by <a href="https://github.com/bowensanders/" target="new">Bowen Sanders</a>.
-                  <br>Theme based on <strong>PlainDisplay</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. </p>
+                  <br>Theme based on <strong>mini.css</strong>, a free CSS template found at <a href="https://minicss.org/docs" rel="nofollow">minicss.org</a>. </p>
             </div>
         </div>
     </div>
