new CSS and stripped old code

--- a/securityguard.html
+++ b/securityguard.html
@@ -60,49 +60,27 @@
   </head>
   <!-- <body onload="bodyOnLoad()"> -->
   <body>
-      <div id="wrapper">
-          <!-- Nav Section -->
-          <div id="header-wrapper">
-              <div id="header" class="container">
-                  <div id="logo">
-                      <h1><a href="index.html"><img src="securityguard.png" height="40" width="40" align="top"> SecurityGuard</a></h1>
-                  </div>
-                  <div id="menu">
-                      <ul>
-                        
-                      </ul>
-                  </div>
-              </div>
-          </div>
+      <header>
+        <img src="securityguard.png" height="40" width="40" align="top">
+        <h1>SecurityGuard</h1>
+      </header>
 
         <!-- guestbook form Section -->
         <div id="meta-mask-required">
-        <div id="page" class="container">
-            <div class="title">
-                <h2>Security Guard:</h2>
-            </div>
-                <span class="byline">
-                  <br>
-                    <a href="#" class="button" onclick="sendCheckIn()">CHECK IN NOW</a>
-                  <div id="response"></div>
+            <h2>Security Guard:</h2>
+            <br>
+            <a href="#" class="button" onclick="sendCheckIn()">CHECK IN NOW</a>
+            <div id="response"></div>
+        </div>
 
-                </span>
 
-    </div>
-
-    </div>
 
     <!-- instructions Section -->
 
 
-    <div id="footer">
-        <div class="container">
-            <div class="title">
-                <p>SecurityGuard is a <a href="https://giveth.io" target="new">Giveth</a> Security Project, Interface by <a href="https://github.com/bowensanders/" target="new">Bowen Sanders</a>.
-                  <br>Theme based on <strong>mini.css</strong>, a free CSS template found at <a href="https://minicss.org/docs" rel="nofollow">minicss.org</a>. </p>
-            </div>
-        </div>
-    </div>
+    <footer>
+      <p>SecurityGuard is a <a href="https://giveth.io" target="new">Giveth</a> Security Project, Interface by <a href="https://github.com/bowensanders/" target="new">Bowen Sanders</a>.<br>Theme based on <strong>mini.css</strong>, a free CSS template found at <a href="https://minicss.org/docs" rel="nofollow">minicss.org</a>.</p>
+    </footer>
 
   </body>
 </html>
