--- a/securityguard.html
+++ b/securityguard.html
@@ -62,7 +62,7 @@
   <body>
       <header>
         <img src="securityguard.png" height="40" width="40" align="top">
-        <h1>SecurityGuard</h1>
+        <a href="#" class="logo">SecurityGuard</a>
       </header>
 
         <!-- guestbook form Section -->
