--- a/securityguard.html
+++ b/securityguard.html
@@ -67,9 +67,9 @@
 
         <!-- guestbook form Section -->
         <div id="meta-mask-required">
-            <h2>Security Guard:</h2>
+            <h3>Security Guard Commands:</h3>
             <br>
-            <a href="#" class="button" onclick="sendCheckIn()">CHECK IN NOW</a>
+            <a href="#" class="button" onclick="sendCheckIn()">Check In Now</a>
             <div id="response"></div>
         </div>
 
