--- a/securityguard.html
+++ b/securityguard.html
@@ -67,10 +67,12 @@
 
         <!-- guestbook form Section -->
         <div id="meta-mask-required">
+          <div class="card">
             <h3>Security Guard Commands:</h3>
             <br>
             <a href="#" class="button" onclick="sendCheckIn()">Check In Now</a>
-            <div id="response"></div>
+          </div>
+          <div id="response"></div>
             <br>
             <br>
             <br>
