--- a/inquire/index.html
+++ b/inquire/index.html
@@ -15,7 +15,7 @@
         <h1>Giveth Bridge Address Inspector</h1>
     </div>
     <div id="body__top">
-        <h2>Please see the console for links to possible milestones.</h2>
+        <h2>Please see the javascript console (CMD-OPT-J) for links to possible milestones.</h2>
     </div>
 
 </body>
