Added further comment and switched trunc to 8

--- a/inquire/index.html
+++ b/inquire/index.html
@@ -15,7 +15,12 @@
         <h1>Giveth Bridge Address Inspector</h1>
     </div>
     <div id="body__top">
-        <h2>Please see the javascript console (CMD-OPT-J) for links to possible milestones.</h2>
+        <h2>
+            Please see the javascript console (CMD-OPT-J) for links to possible milestones.<br>
+            This could take a moment as it uses a CORS proxy.<br> 
+            ETH decimals truncated at 8 places.<br>
+            Milestones are displayed newest > oldest.
+        </h2>
     </div>
 
 </body>
